--- a/git/config
+++ b/git/config
@@ -3,7 +3,7 @@
 	name = miramir
 
 [credential]
-	helper = cache --timeout=3600
+    helper = cache --timeout=3600 --socket=${XDG_CACHE_HOME}/git-credential-cache/socket]
 
 [credential "https://github.com"]
 	username = miramir
